# KryneEngine2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  Folder.DotSettings  KryneEngine.natvis  KryneEngine_lldb.py  slangdconfig.json
Core/: CMakeLists.txt
Core/Common/: Arrays.hpp  Assert.cpp  Assert.hpp  BitUtils.hpp  StringHelpers.hpp  Types.hpp  additional_impl.cpp
Core/Common/Utils/: Alignment.hpp  MultiFrameTracking.hpp
Core/Files/: File.cpp  FileSystemHelper.hpp  FileWatcher.cpp  IoQueryManager.cpp  IoQueryManager.hpp  WatchedDirectory.cpp  WatchedDirectory.hpp
Core/Graphics/: CMakeLists.txt
Core/Graphics/Common/: Buffer.hpp  Drawing.hpp  EnumHelpers.cpp  EnumHelpers.hpp  Enums.hpp  GraphicsCommon.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Handles.hpp  MemoryAllocation.hpp  MemoryBarriers.hpp  RenderPass.hpp  RenderTargetView.hpp  ShaderPipeline.hpp  Texture.hpp  Window.hpp
Core/Graphics/DX12/: Dx12DescriptorSetManager.cpp  Dx12DescriptorSetManager.hpp  Dx12FrameContext.cpp  Dx12FrameContext.hpp  Dx12GraphicsContext.cpp  Dx12GraphicsContext.hpp  Dx12Headers.hpp  Dx12Resources.cpp  Dx12Resources.h  Dx12SwapChain.cpp  Dx12SwapChain.hpp  Dx12Types.hpp  HelperFunction.cpp  HelperFunctions.hpp
Core/Graphics/Metal/: MetalArgumentBufferManager.cpp  MetalArgumentBufferManager.hpp  MetalCppImplementation.cpp  MetalFrameContext.cpp  MetalFrameContext.hpp  MetalGraphicsContext.cpp  MetalGraphicsContext.hpp  MetalGraphicsContextInit.cpp  MetalGraphicsContextInit.mm  MetalHeaders.hpp  MetalResources.cpp  MetalResources.hpp  MetalSwapChain.hpp  MetalSwapChain.mm  MetalTypes.hpp
Core/Graphics/VK/: CommonStructures.hpp  HelperFunctions.cpp  HelperFunctions.hpp  VkDebugHandler.hpp  VkDescriptorSetManager.cpp  VkDescriptorSetManager.hpp  VkFrameContext.cpp  VkFrameContext.hpp  VkGraphicsContext.cpp  VkGraphicsContext.hpp  VkHeaders.hpp  VkResources.cpp  VkResources.hpp  VkSurface.cpp  VkSurface.hpp  VkSwapChain.cpp  VkSwapChain.hpp  VkTypes.hpp  VmaUsage.cpp
Core/Graphics/Window/: Window.cpp  Window.hpp
Core/Memory/: GenerationalPool.hpp  GenerationalPool.inl  SimplePool.hpp  SimplePool.inl
Core/Platform/: Windows.h
Core/Profiling/: TracyHeader.hpp
Core/Src/Common/: Assert.cpp  BitUtils.cpp  StringHelpers.cpp  additional_impl.cpp
Core/Src/Files/: File.cpp  File.hpp  FileSystemHelper.cpp  FileSystemHelper.hpp  FileWatcher.cpp  FileWatcher.hpp  IoQueryManager.cpp  IoQueryManager.hpp  WatchedDirectory.cpp  WatchedDirectory.hpp
Core/Src/Graphics/: EnumHelpers.cpp  GraphicsContext.cpp
Core/Src/Math/: Float16.cpp  Hashing.cpp  Matrix33.cpp  Matrix44.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Core/Src/Platform/: StdAlloc.cpp
Core/Src/Profiling/: TracyGpuProfilerContext.cpp
Core/Src/Threads/: FiberJob.cpp  FiberThread.cpp  FibersManager.cpp  HelperFunctions.cpp  LightweightMutex.cpp  LightweightSemaphore.cpp  RwSpinLock.cpp  SpinLock.cpp  SyncCounterPool.cpp
Core/Src/Window/: Window.cpp
Core/Threads/: FiberJob.cpp  FiberJob.hpp  FiberThread.cpp  FiberThread.hpp  FiberTls.inl  FibersManager.cpp  FibersManager.hpp  HelperFunctions.cpp  HelperFunctions.hpp  LightweightBinarySemaphore.hpp  LightweightMutex.cpp  LightweightMutex.hpp  LightweightSemaphore.cpp  LightweightSemaphore.hpp  SpinLock.cpp  SpinLock.hpp  SyncCounterPool.cpp  SyncCounterPool.hpp
Core/Threads/Internal/: FiberContext.cpp  FiberContext.hpp
Core/Window/: Window.cpp  Window.hpp
Core/Window/Input/: Enums.hpp  InputEnums.hpp  InputManager.cpp  InputManager.hpp  InputPhysicalKeys.hpp  KeyInputEvent.hpp  MouseInputEvent.hpp
Examples/HelloTriangle/: CMakeLists.txt  HelloTriangle.cpp
Examples/HelloTriangle/Shaders/: Triangle.hlsl  Triangle.shader  Triangle.slang
Examples/RenderGraphDemo/: CMakeLists.txt  RenderGraphDemo.cpp  TorusKnotMeshGenerator.hpp
Examples/RenderGraphDemo/Rendering/: ColorMappingPass.cpp  ColorMappingPass.hpp  DeferredShadingPass.cpp  DeferredShadingPass.hpp  DeferredShadowPass.cpp  DeferredShadowPass.hpp  FullscreenPassCommon.cpp  FullscreenPassCommon.hpp  (+4 more)
Examples/UiDemo/: CMakeLists.txt  TextureGenerator.cpp  TextureGenerator.hpp  UiCube.cpp  UiCube.hpp  UiDemo.cpp
Lib/: CMakeLists.txt  KryneEngine.natvis
Lib/Common/: Arrays.hpp  Assert.cpp  Assert.hpp  BitUtils.hpp  KEEastlHelpers.hpp  KEStringHelpers.hpp  KEStructs.hpp  KETypes.hpp  SharedObject.hpp  StringHelpers.hpp  Types.hpp
Lib/Files/: File.cpp  File.hpp  FileSystemHelper.cpp  FileSystemHelper.hpp  FileWatcher.cpp  FileWatcher.hpp  IoQueryManager.cpp  IoQueryManager.hpp  WatchedDirectory.hpp
Lib/Graphics/: CMakeLists.txt
Lib/Memory/: GenerationalPool.hpp  GenerationalPool.inl  RangeMapping.hpp
Lib/Threads/: FiberJob.cpp  FiberJob.hpp  FiberThread.cpp  FiberThread.hpp  FiberTls.hpp  FiberTls.inl  FibersManager.cpp  FibersManager.hpp  HelperFunctions.cpp  HelperFunctions.hpp  LightweightBinarySemaphore.hpp  LightweightMutex.hpp  RwMutex.hpp  Semaphore.hpp  SpinLock.hpp  SyncCounterPool.cpp  SyncCounterPool.hpp
Modules/: CMakeLists.txt
Modules/Clay/: CMakeLists.txt
Modules/GraphicsUtils/: CMakeLists.txt  DynamicBuffer.cpp  DynamicBuffer.hpp
Modules/GuiLib/: CMakeLists.txt
Modules/ImGui/: CMakeLists.txt  Context.cpp  Context.hpp  Input.cpp  Input.hpp  InputConverters.cpp  InputConverters.hpp
Modules/ImGuiModule/: CMakeLists.txt  ImGuiModule.cpp  ImGuiModule.hpp
Modules/RenderGraph/: Builder.cpp  Builder.hpp  CMakeLists.txt  PassDeclaration.hpp  Registry.cpp  Registry.hpp  RenderGraph.cpp  RenderGraph.hpp  Resource.hpp
Modules/RenderGraphDebug/: CMakeLists.txt
Modules/Resources/: CMakeLists.txt
Modules/RpsRuntime/: CMakeLists.txt
Modules/SdfTexture/: CMakeLists.txt
Modules/ShaderCompiler/: CMakeLists.txt  ShaderCompiler.cpp  ShaderCompiler.h
Modules/ShaderLib/: CMakeLists.txt
Modules/ShaderReflection/: CMakeLists.txt
Modules/TextRendering/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Core/: CMakeLists.txt
Tests/Modules/: CMakeLists.txt
Tests/Utils/: AssertUtils.cpp  AssertUtils.hpp  Comparison.hpp  SvgDump.cpp  SvgDump.hpp
(+405 files in other folders)
